--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "An FCC Backend Challenge",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.12.4",
-    "cors": "^2.8.0"
+    "cors": "^2.8.0",
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.3",
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.20"
   },
   "repository": {
     "type": "git",
